# SCARA-PPR

./: .gitignore  .gitmodules  LICENSE.rtf  README.md
Precompute/: BasicDefinition.h  BatchRandomWalk.h  CMakeLists.txt  CleanGraph.h  FeatureDecomp.h  FeatureOp.cpp  FeatureOp.h  Graph.h  HelperFunctions.cpp  HelperFunctions.h  MyQueue.h  MyRandom.cpp  MyRandom.h  MyType.h  SpeedPPR.h  fastPRNG.h  main.cpp  npy.hpp  run_amazon2m.sh  run_mag.sh  run_paper.sh  run_pubmed.sh  run_reddit.sh
Precompute/script/: run_amazon2m.sh  run_mag.sh  run_paper.sh  run_ppi.sh  run_pubmed.sh  run_reddit.sh  run_yelp.sh
Train/: data_processor.py  demo.ipynb  load_inductive.py  load_transductive.py  loader.py  logger.py  model.py  requirements.txt  run.py  run.sh  run_inductive.py  run_node.py  run_transductive.py  utils.py
Train/config/: amazon2m.json  mag.json  paper.json  ppi.json  ppi_featpush.json  pubmed.json  pubmed_featpush.json  reddit.json  reddit_featpush.json  yelp.json
data_demo/pubmed/: adj.txt
